2006-06-25  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (brokenXXX, trueXXX): Add.
	* TestI386Regs.java: Use.
	* TestI386Modify.java: Use.
	* TestTaskSyscallObserver.java: Use.
	* TestModify.java: Use.
	
	* TaskState.java: Run EMACS indent over code.
	* ProcTasksObserver.java: Ditto.
	* TestLib.java: Ditto.
	* TestProcTasksObserver.java: Ditto.

2006-06-24  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcTasksObserver.java (addFailed): Made addFailed call addFailed of
	the observer instead of throwing an exception.

2006-06-23  Nurdin Premji  <npremji@redhat.com>

	* TestLib.java (DetachedAckProcess): Added
	* TestProcTasksObserver.java: Added, was TestOffspringObserver.
	* ProcTasksObserver.java: Renamed, was OffspringObserver. Implemented 
	TasksObserver.Terminated, unimplemented TasksObserver.ForkedObserver.
	(requestAddObservers): added. To keep track of all the tasksObservers
	implemented.
	* ProcObserver.java (ProcTasks): Renamed was Offspring.

2006-06-19  Nurdin Premji  <npremji@redhat.com>

	* OffspringObserver.java (procOffspringObserver): renamed. Was 
	offspringObserver.
	(execute): Added more detail to exception thrown. Bug 2795

2006-06-19  Mike Cvet  <mcvet@redhat.com>

	* TestTaskTerminateObserver.java (testTerm): Fixed attachCounter.count oops

2006-06-16  Nurdin Premji  <npremji@redhat.com>

	* TestOffspringObserver.java 
	(addObserverToProcRequestStopAssertRunUntilStop): Renamed
	was addObserverToProcRquestStop.
	(testExistingClone): Added.
	(testExistingFork): Added.
	(testForkThenKill): Added.
	(testCloneThenKill): Added.
	(testStressForking): Added.
	* ProcObserver.java (taskAdded): Documentation.
	* OffspringObserver.java: Implemented Terminated Observer.
	(updateTerminated): Added.

2006-06-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* TestTaskSyscallObserver.java: Enabled the rest of the tests.
	* TestLib.java: Added StopEventLoopWhenProcRemoved.
	* TaskState.java: removed handleExeced from syscallRunning state.