@@ -1,5 +1,8 @@
 2006-06-25  Andrew Cagney  <cagney@redhat.com>
 
+	* StressAttachDetachSignaledTask.java: New file and tests,
+	disable.
+
 	* TestLib.java (brokenXXX, trueXXX): Add.
 	* TestI386Regs.java: Use.
 	* TestI386Modify.java: Use.
